--- a/input.css
+++ b/input.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
 
 /* * {
     box-sizing: border-box;
@@ -7,7 +9,7 @@
 } */
 
 body {
-    background-color: #EEE;
+    /* background-color: #EEE; */
     font-family: "Nunito", sans-serif;
     font-optical-sizing: auto;
   font-weight: 400;
